--- a/FormLogin.html
+++ b/FormLogin.html
@@ -23,7 +23,7 @@
   <body>
     <section class="nav__header">
       <ul>
-        <li><a href="Home.html">Trang chủ</a></li>
+        <li><a href="index.html">Trang chủ</a></li>
         <li><a href="#">Giới thiệu</a></li>
         <li><a href="#hangDT">Hãng điện thoại</a></li>
         <li><a href="#">Hệ thống siêu thị</a></li>
