--- a/admin.html
+++ b/admin.html
@@ -21,13 +21,13 @@
   <body>
     <section class="nav__header">
       <ul>
-        <li><a href="Home.html">Trang chủ</a></li>
+        <li><a href="index.html">Trang chủ</a></li>
         <li><a href="#">Giới thiệu</a></li>
         <li><a href="#hangDT">Hãng điện thoại</a></li>
         <li><a href="#">Hệ thống siêu thị</a></li>
         <li><a href="gioHang.html">Tra cứu đơn hàng</a></li>
         <li><a href="Them-SanPham.html">Thêm Sản Phẩm</a></li>
-        <li><a href="Home.html">Thoát</a></li>
+        <li><a href="index.html">Thoát</a></li>
       </ul>
     </section>
     <section class="mobile">
@@ -35,7 +35,7 @@
         <div class="nav__banner">
           <div class="header__logo">
             <h3>
-              <a href="Home.html"><span>M</span>obile.com</a>
+              <a href="index.html"><span>M</span>obile.com</a>
             </h3>
           </div>
           <div class="header__nav--search">
