--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <body>
     <section class="nav__header">
       <ul>
-        <li><a href="Home.html">Trang chủ</a></li>
+        <li><a href="index.html">Trang chủ</a></li>
         <li><a href="#">Giới thiệu</a></li>
         <li><a href="#hangDT">Hãng điện thoại</a></li>
         <li><a href="#">Hệ thống siêu thị</a></li>
@@ -36,7 +36,7 @@
         <div class="nav__banner">
           <div class="header__logo">
             <h3>
-              <a href="Home.html"><span>M</span>obile.com</a>
+              <a href="index.html"><span>M</span>obile.com</a>
             </h3>
           </div>
           <div class="header__nav--search">
