--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           <li><a href="#">Giới thiệu</a></li>
           <li><a href="#hangDT">Hãng điện thoại</a></li>
           <li><a href="#">Hệ thống siêu thị</a></li>
-          <li><a href="gioHang.html">Tra cứu đơn hàng</a></li>
+          <li><a href="gioHang.html">Giỏ Hàng</a></li>
           <li class="hide"><a href="Them-SanPham.html">Thêm Sản Phẩm</a></li>
           <li><a href="FormLogin.html">Đăng nhập</a></li>
         </ul>
