--- a/Them-SanPham.html
+++ b/Them-SanPham.html
@@ -5,45 +5,124 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Thêm Sản Phẩm</title>
-    <link rel="stylesheet" href="css/themSP.css" />
-    <link rel="shortcut icon" href="" />
+    <script
+      src="https://kit.fontawesome.com/47907ab6ea.js"
+      crossorigin="anonymous"
+    ></script>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
+    />
+    <link rel="stylesheet" href="fileCSS/style.css" />
     <script src="fileJS/hotro.js"></script>
     <script src="fileJS/sanPham.js"></script>
     <script src="fileJS/gioHang.js"></script>
   </head>
   <body>
-    <div class="them-moi-san-pham">
-      <label for="hinhAnh">Hình Ảnh Sản Phẩm</label>
-      <input type="text" id="hinhAnh" />
+    <section class="mobile">
+      <div id="icon_close" onclick="closeCLick()">
+        <i class="fa-solid fa-xmark close" id="close"></i>
+      </div>
+      <div class="bar_icon" id="bar_icon" onclick="openClicl()">
+        <i class="fa-solid fa-bars open" id="open"></i>
 
-      <label for="ten">Tên Sản Phẩm</label>
-      <input type="text" id="ten" />
+        <div class="nav__header" id="nav_header">
+          <ul>
+            <li>
+              <a href="index.html">Trang chủ</a>
+            </li>
+            <li><a href="#">Giới thiệu</a></li>
+            <li><a href="#hangDT">Hãng điện thoại</a></li>
+            <li><a href="#">Hệ thống siêu thị</a></li>
+            <li><a href="gioHang.html">Giỏ Hàng</a></li>
+            <li class="hide"><a href="Them-SanPham.html">Thêm Sản Phẩm</a></li>
+            <li><a href="FormLogin.html">Đăng nhập</a></li>
+          </ul>
+        </div>
+      </div>
+      <div class="them-moi-san-pham">
+        <label for="hinhAnh">Hình Ảnh Sản Phẩm</label>
+        <input type="file" id="hinhAnh" />
 
-      <label for="giaGoc">Giá Gốc</label>
-      <input type="number" id="giaGoc" />
+        <label for="ten">Tên Sản Phẩm</label>
+        <input type="text" id="ten" />
 
-      <label for="hangDT">Hãng Điện thoại</label>
-      <select name="hangDT" id="hangDT">
-        <option value="Apple">Apple</option>
-        <option value="SamSung">SamSung</option>
-        <option value="Nokia">Nokia</option>
-        <option value="Vivo">Vivo</option>
-        <option value="Oppo">Oppo</option>
-        <option value="Xiaomi">Xiaomi</option>
-        <option value="Realme">Realme</option>
-        <option value="TCL">TCL</option>
-        <option value="Itel">Itel</option>
-        <option value="Mobell">Mobell</option>
-      </select>
+        <label for="giaGoc">Giá Gốc</label>
+        <input type="number" id="giaGoc" />
 
-      <label for="moTa">Nội dung mô tả sản phẩm</label>
-      <textarea id="moTa" cols="35" rows="10"></textarea>
+        <label for="hangDT">Hãng Điện thoại</label>
+        <select name="hangDT" id="hangDT">
+          <option value="Apple">Apple</option>
+          <option value="SamSung">SamSung</option>
+          <option value="Nokia">Nokia</option>
+          <option value="Vivo">Vivo</option>
+          <option value="Oppo">Oppo</option>
+          <option value="Xiaomi">Xiaomi</option>
+          <option value="Realme">Realme</option>
+          <option value="TCL">TCL</option>
+          <option value="Itel">Itel</option>
+          <option value="Mobell">Mobell</option>
+        </select>
 
-      <button onclick="onClickTaoSanPham()">Tạo Sản Phẩm</button>
+        <label for="moTa">Nội dung mô tả sản phẩm</label>
+        <textarea id="moTa" cols="35" rows="10"></textarea>
 
-      <!-- <label for="hinhAnh">Hình Ảnh Sản Phâm</label>
-      <input type="text" id="hinhAnh"> -->
-    </div>
+        <button onclick="onClickTaoSanPham()">Tạo Sản Phẩm</button>
+
+        <!-- <label for="hinhAnh">Hình Ảnh Sản Phâm</label>
+        <input type="text" id="hinhAnh"> -->
+      </div>
+      <div class="footer">
+        <div class="footer_container">
+          <div class="footer_colum">
+            <div class="footer_col1">
+              <h1>Tổng đài hỗ trợ miễn phí</h1>
+              <div class="footer__col1-text">
+                <p>hot line mua hàng 1800.1212(7h20 - 21h00)</p>
+                <p>hot line khiếu nại 1800.1212(7h20 - 21h00)</p>
+                <p>hot line bảo hành 1800.1212(7h20 - 21h00)</p>
+              </div>
+            </div>
+            <div class="footer_col1">
+              <h1>Thông tin và chính sách</h1>
+              <div class="footer__col1-text">
+                <a href="#"><p>mua hàng và thanh toán online</p></a>
+                <a href="#"><p>Mua hàng trả góp Online</p></a>
+                <a href="#"><p>Tra thông tin đơn hàng</p></a>
+                <a href="#"><p>Tra thông tin bảo hành</p></a>
+                <a href="#"><p>Thông tin hoá đơn mua hàng</p></a>
+                <a href="#"><p>Trung tâm bảo hành chính hãng</p></a>
+              </div>
+            </div>
+            <div class="footer_col1">
+              <h1>Dịch vụ và thông tin khác</h1>
+              <div class="footer__col1-text">
+                <a href="#"><p>Ưu đãi thanh toán</p></a>
+                <a href="#"><p>Quy chế hoạt động</p></a>
+                <a href="#"><p>Chính sách Bảo hành</p></a>
+                <a href="#"><p>Tuyển dụng</p></a>
+                <a href="#"><p>Dịch vụ bảo hành mở rộng</p></a>
+              </div>
+            </div>
+            <div class="footer_col1">
+              <h1>Kết nối với Mobile</h1>
+              <div class="footer_col1-icon">
+                <a href="#" onclick="closeCLick()"
+                  ><img src="image/imgLogo/cellphones-youtube.png" alt=""
+                /></a>
+                <a href="#"
+                  ><img src="image/imgLogo/mobile-facebook.png" alt=""
+                /></a>
+                <a href="#"><img src="image/imgLogo/instagram.png" alt="" /></a>
+                <a href="#"><img src="image/imgLogo/tiktok.png" alt="" /></a>
+                <a href="#"><img src="image/imgLogo/zalo.png" alt="" /></a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <script>
       var creatProduct = JSON.parse(localStorage.getItem("creatProduct"));
       if (creatProduct == null) {
@@ -82,10 +161,10 @@
         var jsonDanhSachSP = JSON.stringify(creatProduct);
         localStorage.setItem("creatProduct", jsonDanhSachSP);
         var jsonDanhSachSP = localStorage.getItem("creatProduct");
-        console.log("dnah sách sản phâm:");
-        console.log(jsonDanhSachSP);
+
         alert("Thêm sản phẩm thành công");
       }
     </script>
+    <script src="fileJS/javscript.js"></script>
   </body>
 </html>
