--- a/admin.html
+++ b/admin.html
@@ -36,7 +36,7 @@
             <li><a href="#">Hệ thống siêu thị</a></li>
             <li><a href="gioHang.html">Giỏ Hàng</a></li>
             <li class="hide"><a href="Them-SanPham.html">Thêm Sản Phẩm</a></li>
-            <li><a href="FormLogin.html">Đăng nhập</a></li>
+            <li><a href="index.html">Thoát</a></li>
           </ul>
         </div>
       </div>
@@ -252,55 +252,7 @@
         </div>
       </div>
     </section>
-    <section class="footer">
-      <div class="footer_container">
-        <div class="footer_colum">
-          <div class="footer_col1">
-            <h1>Tổng đài hỗ trợ miễn phí</h1>
-            <div class="footer__col1-text">
-              <p>hot line mua hàng 1800.1212(7h20 - 21h00)</p>
-              <p>hot line khiếu nại 1800.1212(7h20 - 21h00)</p>
-              <p>hot line bảo hành 1800.1212(7h20 - 21h00)</p>
-            </div>
-          </div>
-          <div class="footer_col1">
-            <h1>Thông tin và chính sách</h1>
-            <div class="footer__col1-text">
-              <a href="#"><p>mua hàng và thanh toán online</p></a>
-              <a href="#"><p>Mua hàng trả góp Online</p></a>
-              <a href="#"><p>Tra thông tin đơn hàng</p></a>
-              <a href="#"><p>Tra thông tin bảo hành</p></a>
-              <a href="#"><p>Thông tin hoá đơn mua hàng</p></a>
-              <a href="#"><p>Trung tâm bảo hành chính hãng</p></a>
-            </div>
-          </div>
-          <div class="footer_col1">
-            <h1>Dịch vụ và thông tin khác</h1>
-            <div class="footer__col1-text">
-              <a href="#"><p>Ưu đãi thanh toán</p></a>
-              <a href="#"><p>Quy chế hoạt động</p></a>
-              <a href="#"><p>Chính sách Bảo hành</p></a>
-              <a href="#"><p>Tuyển dụng</p></a>
-              <a href="#"><p>Dịch vụ bảo hành mở rộng</p></a>
-            </div>
-          </div>
-          <div class="footer_col1">
-            <h1>Kết nối với Mobile</h1>
-            <div class="footer_col1-icon">
-              <a href="#"
-                ><img src="image/imgLogo/cellphones-youtube.png" alt=""
-              /></a>
-              <a href="#"
-                ><img src="image/imgLogo/mobile-facebook.png" alt=""
-              /></a>
-              <a href="#"><img src="image/imgLogo/instagram.png" alt="" /></a>
-              <a href="#"><img src="image/imgLogo/tiktok.png" alt="" /></a>
-              <a href="#"><img src="image/imgLogo/zalo.png" alt="" /></a>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
+
     <script>
       var counter = 1;
       setInterval(function () {
