--- a/Them-SanPham.html
+++ b/Them-SanPham.html
@@ -42,7 +42,11 @@
       </div>
       <div class="them-moi-san-pham">
         <label for="hinhAnh">Hình Ảnh Sản Phẩm</label>
-        <input type="file" id="hinhAnh" />
+        <input
+          type="file"
+          id="hinhAnh"
+          accept="image/gif, image/jpeg, image/png"
+        />
 
         <label for="ten">Tên Sản Phẩm</label>
         <input type="text" id="ten" />
