--- a/gioHang.html
+++ b/gioHang.html
@@ -257,5 +257,6 @@
           tongGia.toLocaleString();
       }
     </script>
+    <script src="fileJS/javscript.js"></script>
   </body>
 </html>
