--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <script src="fileJS/hotro.js"></script>
     <script src="fileJS/sanPham.js"></script>
     <script src="fileJS/gioHang.js"></script>
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
   </head>
   <body>
     <section class="mobile">
@@ -128,6 +129,7 @@
               <img
                 src="https://lesang.vn/hinh-anh-le-sang/images/iphone-5-hinh-anh-chinh-thuc-3.jpg"
                 alt=""
+                id="image"
               />
             </div>
             <h2 class="item_title">I Phone 11</h2>
