--- a/Them-SanPham.html
+++ b/Them-SanPham.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="fileCSS/style.css" />
     <script src="fileJS/hotro.js"></script>
     <script src="fileJS/sanPham.js"></script>
-    <script src="fileJS/gioHang.js"></script>
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
   </head>
   <body>
     <section class="mobile">
@@ -42,9 +42,11 @@
       </div>
       <div class="them-moi-san-pham">
         <label for="hinhAnh">Hình Ảnh Sản Phẩm</label>
+
         <input
           type="file"
           id="hinhAnh"
+          onchange="chooseFile(this)"
           accept="image/gif, image/jpeg, image/png"
         />
 
