--- a/imagess.html
+++ b/imagess.html
@@ -4,21 +4,20 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Apple</title>
-    <script src="fileJS/sanPham.js"></script>
+    <title>Document</title>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="fileJS/hotro.js"></script>
   </head>
   <body>
     <form action="">
       <img src="" alt="" id="image" width="200" , height="200" />
-      <input
+      <!-- <input
         type="file"
         name=""
         id="imageFile"
         onchange="chooseFile(this)"
         accept="image/gif, image/jpeg, image/png"
-      />
+      /> -->
     </form>
-    <script></script>
   </body>
 </html>
