--- a/Them-SanPham.html
+++ b/Them-SanPham.html
@@ -44,9 +44,8 @@
         <label for="hinhAnh">Hình Ảnh Sản Phẩm</label>
 
         <input
-          type="file"
+          type="text"
           id="hinhAnh"
-          onchange="chooseFile(this)"
           accept="image/gif, image/jpeg, image/png"
         />
 
