--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
       // chuyển danh sách đối tượng sang HTML
       var HTML = chuyenDanhSachSPSangHTML(creatProduct);
 
-      // gán HTML vào Selection grid
+      // gán HTML vào product
       var nodeProducts = document.getElementById("products");
       nodeProducts.innerHTML = HTML;
 
