--- a/Them-SanPham.html
+++ b/Them-SanPham.html
@@ -34,9 +34,11 @@
             <li><a href="#">Giới thiệu</a></li>
             <li><a href="#hangDT">Hãng điện thoại</a></li>
             <li><a href="#">Hệ thống siêu thị</a></li>
-            <li><a href="gioHang.html">Giỏ Hàng</a></li>
-
-            <li><a href="FormLogin.html">Đăng nhập</a></li>
+            <li><a href="Them-SanPham.html">Thêm Sản Phẩm</a></li>
+            <li>
+              <a href="productdetails.html">Quản lí Danh Sách Sản phầm</a>
+            </li>
+            <li><a href="index.html">Thoát</a></li>
           </ul>
         </div>
       </div>
