--- a/admin.html
+++ b/admin.html
@@ -34,8 +34,10 @@
             <li><a href="#">Giới thiệu</a></li>
             <li><a href="#hangDT">Hãng điện thoại</a></li>
             <li><a href="#">Hệ thống siêu thị</a></li>
-            <li><a href="gioHang.html">Giỏ Hàng</a></li>
             <li class="hide"><a href="Them-SanPham.html">Thêm Sản Phẩm</a></li>
+            <li class="hide">
+              <a href="productdetails.html">Quản lí Danh Sách Sản phầm</a>
+            </li>
             <li><a href="index.html">Thoát</a></li>
           </ul>
         </div>
