--- a/gioHang.html
+++ b/gioHang.html
@@ -194,6 +194,7 @@
         console.log(itemGioHang.idSanPham);
 
         var giaHienTai = itemGioHang.soLuong * sanPham.giaGoc;
+        var num = parseInt(giaHienTai);
 
         var html =
           ' <div class="items">\n' +
