--- a/FormLogin.html
+++ b/FormLogin.html
@@ -71,7 +71,7 @@
           </div>
         </div>
         <div class="ifSigup">
-          <a href="#">Đăng ký tài khoản tại đây</a>
+          <a href="formSingup.html">Đăng ký tài khoản tại đây</a>
         </div>
         <div class="btn">
           <button onclick="dangNhap()">Đăng Nhập</button>
