--- a/Them-SanPham.html
+++ b/Them-SanPham.html
@@ -80,7 +80,13 @@
         <!-- <label for="hinhAnh">Hình Ảnh Sản Phâm</label>
         <input type="text" id="hinhAnh"> -->
       </div>
+      
       <div id="products">
+        <div class="menuAu">
+          <i class="fa-solid fa-list"></i>
+          <h3>Danh Sách Sản Phẩm</h3>
+        </div>
+       
         <div class="items" id="items">
           <div class="item">
             <div class="item_image">
