--- a/index.html
+++ b/index.html
@@ -282,8 +282,7 @@
       nodeProducts.innerHTML = HTML;
 
       function themSPVaoGioHang(idSanPham, soLuong) {
-        alert("thêm vao:" + idSanPham);
-
+        alert("Them Vào giỏ hàng thành công");
         //bước 2: lấy danh sách giỏ hàng trong localstrorage ra sử dụng hàm tái sử dụng bên giohang.js
         var danhSachItemGioHang = layGioHangTuLocalStorage();
         console.log(danhSachItemGioHang);
