--- a/admin.html
+++ b/admin.html
@@ -20,24 +20,20 @@
   </head>
   <body>
     <section class="mobile">
-      <div id="icon_close" onclick="closeCLick()">
-        <i class="fa-solid fa-xmark close" id="close"></i>
-      </div>
-      <div class="bar_icon" id="bar_icon" onclick="openClicl()">
+      <div class="bar_icon" id="bar_icon" onclick="onclickOpen(this)">
         <i class="fa-solid fa-bars open" id="open"></i>
-
-        <div class="nav__header" id="nav_header">
-          <ul>
-            <li>
-              <a href="index.html">Trang chủ</a>
-            </li>
-            <li><a href="#">Giới thiệu</a></li>
-            <li><a href="#hangDT">Hãng điện thoại</a></li>
-            <li><a href="#">Hệ thống siêu thị</a></li>
-            <li class="hide"><a href="Them-SanPham.html">Thêm Sản Phẩm</a></li>
-            <li><a href="index.html">Thoát</a></li>
-          </ul>
-        </div>
+      </div>
+      <div class="nav__header" id="nav_header">
+        <ul>
+          <li>
+            <a href="index.html">Trang chủ</a>
+          </li>
+          <li><a href="#">Giới thiệu</a></li>
+          <li><a href="#hangDT">Hãng điện thoại</a></li>
+          <li><a href="#">Hệ thống siêu thị</a></li>
+          <li class="hide"><a href="Them-SanPham.html">Thêm Sản Phẩm</a></li>
+          <li><a href="index.html">Thoát</a></li>
+        </ul>
       </div>
       <div class="nav">
         <div class="nav__banner">
