--- a/FormLogin.html
+++ b/FormLogin.html
@@ -73,6 +73,7 @@
           <button onclick="dangNhap()">Đăng Nhập</button>
         </div>
       </div>
+      <div id="toastBox"></div>
     </section>
     <script src="fileJS/javscript.js"></script>
   </body>
