--- a/Them-SanPham.html
+++ b/Them-SanPham.html
@@ -14,11 +14,13 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
     />
     <link rel="stylesheet" href="fileCSS/style.css" />
+    <link rel="stylesheet" href="fileCSS/otherCSS/sigup.css">
     <script src="fileJS/hotro.js"></script>
     <script src="fileJS/sanPham.js"></script>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
   </head>
   <body">
+  <div id="toastBox"></div>
     <section class="mobile">
      
       <div class="bar_icon" id="bar_icon" onclick="onclickOpen(this)">
@@ -154,7 +156,9 @@
           </div>
         </div>
       </div>
+      <div id="toastBox"></div>
     </section>
+    
 
     <script></script>
     <script>
@@ -166,7 +170,7 @@
 
       function onClickTaoSanPham() {
         // console.log("goi ham");
-
+        showToast(succsesMsg)
         nodeHinhAnh = document.getElementById("hinhAnh");
         var hinhAnh = nodeHinhAnh.value;
 
@@ -196,7 +200,7 @@
         localStorage.setItem(keyLocalStorageSanPham, jsonDanhSachSP);
         var jsonDanhSachSP = localStorage.getItem(keyLocalStorageSanPham);
 
-        alert("Thêm sản phẩm thành công");
+        showToast(succsesMsg)
         hienThiDanhSachProduct();
       }
 
@@ -260,7 +264,9 @@
         //
         for (var i = 0; i < sanPham.length; i++) {
           if (sanPham[i].id == layID) {
+           if(confirm("bạn thật sự muốn xóa sản phẩm này")){
             sanPham.splice(i, 1);
+           } 
           }
         }
         localStorage.setItem(keyLocalStorageSanPham, JSON.stringify(sanPham));
