--- a/formSingup.html
+++ b/formSingup.html
@@ -5,7 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>From Đăng Ký</title>
+
     <link rel="stylesheet" href="fileCSS/otherCSS/sigup.css" />
+    <script
+      src="https://kit.fontawesome.com/e7b2442fa6.js"
+      crossorigin="anonymous"
+    ></script>
     <script src="fileJS/formSigUp.js"></script>
   </head>
   <body>
@@ -55,7 +60,7 @@
         <button onclick="dangKy()">Đăng Ký</button>
       </div>
     </div>
-    <script></script>
+    <div id="toastBox"></div>
     <script src="fileJS/javscript.js"></script>
   </body>
 </html>
