--- a/gioHang.html
+++ b/gioHang.html
@@ -230,7 +230,9 @@
         //
         for (var i = 0; i < sanPham.length; i++) {
           if (sanPham[i].idSanPham == layID) {
-            sanPham.splice(i, 1);
+            if (confirm("Bạn muốn xóa sản phẩm này khoi giỏ hàng")) {
+              sanPham.splice(i, 1);
+            }
           }
         }
         luuGioHangVaoLocalStorage(sanPham);
