--- a/index.html
+++ b/index.html
@@ -15,13 +15,16 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
     />
     <link rel="stylesheet" href="fileCSS/style.css" />
+    <link rel="stylesheet" href="fileCSS/otherCSS/sigup.css " />
     <script src="fileJS/hotro.js"></script>
     <script src="fileJS/sanPham.js"></script>
     <script src="fileJS/gioHang.js"></script>
+
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
   </head>
   <body>
     <section class="mobile">
+      <div id="toastBox"></div>
       <div class="bar_icon" id="bar_icon" onclick="onclickOpen(this)">
         <i class="fa-solid fa-bars open" id="open"></i>
       </div>
@@ -105,6 +108,7 @@
           <!-- slider end -->
         </div>
       </div>
+
       <div id="products">
         <div class="items">
           <div class="item">
@@ -278,7 +282,7 @@
       nodeProducts.innerHTML = HTML;
 
       function themSPVaoGioHang(idSanPham, soLuong) {
-        alert("Them Vào giỏ hàng thành công");
+        showToast(succsesMsg);
         //bước 2: lấy danh sách giỏ hàng trong localstrorage ra sử dụng hàm tái sử dụng bên giohang.js
         var danhSachItemGioHang = layGioHangTuLocalStorage();
         console.log(danhSachItemGioHang);
@@ -321,7 +325,6 @@
         nodeProducts.innerHTML = HTML;
       }
     </script>
-
     <script src="fileJS/javscript.js"></script>
   </body>
 </html>
